docs - content and ditamap update for new greenplumpython topic

--- a/gpdb-doc/dita/analytics/analytics.ditamap
+++ b/gpdb-doc/dita/analytics/analytics.ditamap
@@ -29,4 +29,5 @@
       <topicref href="pl_r.xml" linking="none"/>
     </topicref>
     <topicref href="greenplum_r_client.xml" linking="none"/>
+    <topicref href="greenplum_py3_client.xml" linking="none"/>
 </map>
